crates/etl-api/src/configs/snapshots/etl_api__configs__destination__tests__create_api_destination_config_serialization_ducklake.snap
---
source: crates/etl-api/src/configs/destination.rs
assertion_line: 1303
expression: create_config
---
{
  "ducklake": {
    "catalog_url": "postgres://user:pass@localhost:5432/ducklake_catalog",
    "data_path": "s3://bucket/path",
    "pool_size": 4,
    "s3_access_key_id": "access",
    "s3_secret_access_key": "secret",
    "s3_region": "us-east-1",
    "s3_endpoint": "127.0.0.1:5000/s3",
    "s3_url_style": "path",
    "s3_use_ssl": false,
    "metadata_schema": "ducklake",
    "maintenance_target_file_size": "10MB",
    "expire_snapshots_older_than": "7 days",
    "maintenance_mode": "kubernetes"
  }
}
