crates/etl-api/src/configs/snapshots/etl_api__configs__destination__tests__full_api_destination_config_serialization_iceberg_rest.snap
---
source: crates/etl-api/src/configs/destination.rs
expression: full_config
---
{
  "iceberg": {
    "rest": {
      "catalog_uri": "https://catalog.example.com/iceberg",
      "warehouse_name": "my-warehouse",
      "namespace": "my-namespace",
      "s3_access_key_id": "id",
      "s3_secret_access_key": "key",
      "s3_endpoint": "http://localhost:8080"
    }
  }
}
